# portfolio

./: .env.example  .gitignore  README.md  Taskfile.yml  docker-compose.yml  package.json  pnpm-workspace.yaml
.husky/: pre-commit
backend/: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 3693b15eff22_initial_schema.py  a0390250674e_initial_schema.py  b1234567890a_add_users_table.py  c2345678901b_add_posts_and_certifications.py  d3456789012c_resize_embeddings_768.py
backend/app/: __init__.py  main.py
backend/app/api/v1/: router.py
backend/app/api/v1/routes/: ai.py  auth.py  certifications.py  posts.py  projects.py
backend/app/core/: config.py  constants.py  deps.py  error_handlers.py  exceptions.py  logging.py  middleware.py  security.py
backend/app/db/: base.py  session.py
backend/app/models/: __init__.py  certification.py  post.py  project.py  user.py
backend/app/repositories/: certification_repository.py  post_repository.py  project_repository.py  user_repository.py
backend/app/schemas/: ai.py  auth.py  certification.py  post.py  project.py
backend/app/services/: auth_service.py  certification_service.py  post_service.py  project_service.py
backend/app/services/ai/: client.py  prompts.py  rag_service.py  writing_service.py
backend/migrations/: alembic.ini  env.py
backend/scripts/: seed_admin.py
backend/tests/: conftest.py
backend/tests/integration/: test_projects.py
docs/: mkdocs.yml  requirements.txt
docs/docs/: SUMMARY.md  index.md
docs/docs/guides/: ai-pipeline.md  architecture.md  auth.md  backend-architecture.md  database.md  development-setup.md  environment-variables.md  frontend-architecture.md  index.md  quick-start.md
docs/docs/includes/: abbreviations.md
docs/docs/stylesheets/: extra.css
docs/scripts/: gen_backend_ref.py  gen_frontend_ref.py
frontend/: .eslintignore  .gitattributes  .gitignore  .prettierignore  .prettierrc  .prettierrc.json  CONTRIBUTING.md  Dockerfile  Dockerfile.dev  HOOKS_INDEX.md  HUSKY_SETUP.md  IMPLEMENTATION_COMPLETE.txt  PRE_COMMIT_SUMMARY.md  README_HOOKS.md  SETUP_CHECKLIST.md  SETUP_COMPLETE.md  eslint.config.js  eslint.config.mjs  eslint.config.ts  index.html  openapi-ts.config.d.ts  openapi-ts.config.js  openapi-ts.config.ts  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  tsconfig.node.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  typedoc.json  vite.config.js  vite.config.ts  vitest.config.js  vitest.config.ts
frontend/.husky/: README.md  pre-commit
frontend/src/: index.css  index.html  main.tsx  routeTree.gen.ts
frontend/src/components/: ErrorBoundary.tsx  ErrorFallback.tsx  ProtectedRoute.tsx  TerminalCard.tsx
frontend/src/components/ui/: LoadingState.tsx  PageContainer.tsx  PageHeader.tsx  SidebarCard.tsx  TagPill.tsx  index.ts
frontend/src/contexts/: AuthContext.tsx  authContext.ts
frontend/src/hooks/: useAiWrite.ts  useAuth.ts  useCertifications.ts  useEmbedding.ts  usePosts.ts  useProjects.ts
frontend/src/lib/: api-client.ts  constants.ts  errors.ts  query-client.ts  query.ts  tags.ts
frontend/src/lib/api/: client.gen.ts  index.ts  sdk.gen.ts  types.gen.ts
frontend/src/lib/api/@tanstack/: react-query.gen.ts
frontend/src/routes/: __root.tsx  about.tsx  certifications.tsx  index.tsx  login.tsx  projects.tsx
frontend/src/routes/admin/: index.tsx  route.tsx
frontend/src/routes/admin/certifications/: $certId.tsx  index.tsx
frontend/src/routes/admin/posts/: $postSlug.tsx  index.tsx
frontend/src/routes/admin/projects/: $projectSlug.tsx  index.tsx
frontend/src/routes/blog/: $slug.lazy.tsx  $slug.tsx  index.tsx
frontend/src/routes/projects/: $slug.lazy.tsx  $slug.tsx  index.tsx
frontend/src/test/: smoke.test.ts
frontend/src/types/: index.ts
